refs #3 #6 - more WIP for converting to builder pattern and immutable objects